fixing stuff .. don't psuh

--- a/3/Makefile
+++ b/3/Makefile
@@ -1,15 +1,38 @@
-TEST_MODULE = alustim
+TEST_MODULE = tb
 
 SOURCES = \
-	./top.sv \
-	./cpu.sv \
-	./datamem.sv \
-	./instructmem.sv \
-	./idecode.sv \
-	./add.sv \
-	./se.sv \
-	./ze.sv \
+  ./D_FF.sv \
+  ./D_FF_en.sv \
+  ./LS_2.sv \
+  ./add.sv \
+  ./add.sv \
+  ./adder.sv \
+  ./alu.sv \
+  ./cpu.sv \
+  ./datamem.sv \
+  ./decoder1_2.sv \
+  ./decoder2_4.sv \
+  ./decoder3_8.sv \
+  ./decoder5_32.sv \
+  ./idecode.sv \
+  ./instructmem.sv \
   ./math.sv\
+  ./mux2.sv \
+  ./mux2_1.sv \
+  ./mux32_1.sv \
+  ./mux4.sv \
+  ./mux4_1.sv \
+  ./mux5_1.sv \
+  ./mux64.sv \
+  ./mux8_1.sv \
+  ./regfile.sv \
+  ./register64.sv \
+  ./register_bank_32.sv \
+  ./rf.sv \
+  ./se.sv \
+  ./tb.sv \
+  ./top.sv \
+  ./ze.sv \
 
 compile: 
 	vlog -sv -timescale 10ps/10ps -work work $(SOURCES)
